# language-service

./: .grype.yaml  Dockerfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: baseline.yml  label.yml  release.yml  test.yml
language_service/controller/: common.py
language_service/service/tag/: __init__.py  danish.py
tests/: test_language_service.py
tests/service/tag/: test_tagging.py
