[tool.poetry]
name = "language-service"
version = "0.1.0"
description = ""
authors = ["Lucas Kjaero-Zhang <lucas@lucaskjaerozhang.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"

# Web server
gunicorn = "^20.0.4"
flask = "^2.0.2"
gevent = "^21.12.0"

# REST
flask_restful = "^0.3.8"
marshmallow = "^3.14.1"

# Tagging
spacy = "^3.1.0"
da_core_news_sm = {url = "https://github.com/explosion/spacy-models/releases/download/da_core_news_sm-3.1.0/da_core_news_sm-3.1.0.tar.gz"}
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0.tar.gz"}
es_core_news_sm = {url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.1.0/es_core_news_sm-3.1.0.tar.gz"}
zh_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/zh_core_web_sm-3.1.0/zh_core_web_sm-3.1.0.tar.gz"}

# Definitions
wiktionaryparser = "^0.0.97"

# Logging
python-json-logger = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

# Linting and formatting
flake8 = "^4.0.1"
black = "^22.1"

# Security
safety = "^1.8.5"
bandit = "^1.7.2"

# Testing
testfixtures = "^6.18.3"
pytest-mock = "^3.7.0"
coverage = "^6.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
